--- a/lab03_ds102/Lab3.ipynb
+++ b/lab03_ds102/Lab3.ipynb
@@ -153,7 +153,7 @@
    "source": [
     "**Nhận xét:**\n",
     "K-Means rất nhạy cảm với việc khởi tạo tâm cụm ngẫu nhiên.\n",
-    "* Nếu các tâm khởi tạo rơi vào vị trí xấu (ví dụ: 2 tâm cùng rơi vào một cụm thật), K-Means có thể hội tụ tại **cực trị địa phương (Local Optima)** thay vì cực trị toàn cục.\n",
+    "* Nếu các tâm khởi tạo rơi vào vị trí xấu (ví dụ: 2 tâm cùng rơi vào một cụm thật), K-Means có thể hội tụ tại cực trị địa phương (Local Optima) thay vì cực trị toàn cục.\n",
     "* Điều này dẫn đến kết quả phân cụm không chính xác và thay đổi mỗi lần chạy lại code."
    ],
    "id": "8f6cb4c9a9ec3914"
