--- a/lab03_ds102/Lab3.ipynb
+++ b/lab03_ds102/Lab3.ipynb
@@ -164,7 +164,7 @@
    "source": [
     "## Assignment 2: Imbalanced Cluster Sizes\n",
     "**Yêu cầu:**\n",
-    "Nhận xét ảnh hưởng của sự khác nhau về số điểm dữ liệu giữa các cụm của 3 phân phối Gaussian $\\mathcal{N}(\\mu, \\Sigma)$ đến tới hiệu suất của K-means với:\n",
+    "Nhận xét ảnh hưởng của sự khác nhau về số điểm dữ liệu giữa các cụm của 3 phân phối Gaussian $\\mathcal{N}(\\mu, \\Sigma)$ tới hiệu suất của K-means với:\n",
     "* $\\Sigma = \\begin{pmatrix} 1 & 0 \\\\ 0 & 1 \\end{pmatrix}$\n",
     "* $\\mu_1 = (2, 2)$, $\\mu_2 = (8, 3)$, $\\mu_3 = (3, 6)$\n",
     "* Số lượng: $\\mu_1$ 50 điểm dữ liệu. $\\mu_2$ 20 điểm dữ liệu. $\\mu_3$ 1000 điểm dữ liệu."
