--- a/lab03_ds102/Lab3.ipynb
+++ b/lab03_ds102/Lab3.ipynb
@@ -222,7 +222,7 @@
    "source": [
     "**Nhận xét:**\n",
     "K-Means hoạt động kém hiệu quả trên dữ liệu mất cân bằng.\n",
-    "* K-Means tối ưu hóa hàm mục tiêu là **Tổng bình phương sai số (SSE)**. Do đó, thuật toán sẽ ưu tiên giảm sai số cho cụm lớn (1000 điểm) hơn là cụm nhỏ.\n",
+    "* K-Means tối ưu hóa hàm mục tiêu là Tổng bình phương sai số (SSE). Do đó, thuật toán sẽ ưu tiên giảm sai số cho cụm lớn (1000 điểm) hơn là cụm nhỏ.\n",
     "* Kết quả thường thấy là cụm lớn bị \"xẻ nhỏ\" hoặc cụm nhỏ bị \"nuốt chửng\" (gộp chung với các điểm ở rìa cụm lớn) để đạt được giá trị SSE nhỏ nhất, dẫn đến ranh giới phân loại không phản ánh đúng cấu trúc thực tế."
    ],
    "id": "7ce32c4c7453fe0f"
